# Copyright 2025 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

rust_library(
    name = "pw_gdb_protocol",
    srcs = [
        "pw_gdb_protocol/client.rs",
        "pw_gdb_protocol/lib.rs",
        "pw_gdb_protocol/packet.rs",
    ],
    edition = "2024",
    visibility = ["//visibility:public"],
    deps = [
        "@rust_crates//:futures",
        "@rust_crates//:hex",
        "@rust_crates//:nom",
        "@rust_crates//:thiserror",
        "@rust_crates//:tokio",
        "@rust_crates//:tokio-util",
    ],
)

rust_binary(
    name = "cli",
    srcs = ["cli/main.rs"],
    edition = "2024",
    visibility = ["//visibility:public"],
    deps = [
        ":pw_gdb_protocol",
        "@rust_crates//:clap",
        "@rust_crates//:hex",
        "@rust_crates//:tokio",
        "@rust_crates//:tokio-util",
    ],
)

rust_test(
    name = "pw_gdb_protocol_test",
    crate = ":pw_gdb_protocol",
    visibility = ["//visibility:public"],
)
