# Copyright 2025 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load("@rules_python//python:defs.bzl", "py_library")
load("//pw_build:python.bzl", "pw_py_binary")

licenses(["notice"])

py_library(
    name = "lib",
    srcs = [
        "__init__.py",
        "commit.py",
        "helpers.py",
        "story.py",
    ],
    imports = ["."],
    visibility = ["//visibility:private"],
    deps = [
        "//pw_cli/py:pw_cli",
        "@pigweed_python_packages//google_genai",
        "@pigweed_python_packages//requests",
    ],
)

pw_py_binary(
    name = "changelog",
    srcs = ["__main__.py"],
    main = "__main__.py",
    visibility = ["//visibility:public"],
    deps = [":lib"],
)
