# Copyright 2025 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load("//pw_build:compatibility.bzl", "boolean_constraint_value")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

# A list of the RISC-V processor extensions known to the pigweed
# toolchains. These can be used in the platform to define the
# capabilities of the architecture.

# Atomic instructions.
boolean_constraint_value(
    name = "A",
)

# Compressed instructions.
boolean_constraint_value(
    name = "C",
)

# Base integer instruction set.
boolean_constraint_value(
    name = "I",
)

# Integer multiplication and division instructions.
boolean_constraint_value(
    name = "M",
)

# Physical Memory protection instructions.
boolean_constraint_value(
    name = "Smepmp",
)
