# Copyright 2025 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load("@rules_rust//rust:defs.bzl", "rust_library")

package(default_visibility = ["//visibility:public"])

TARGET_COMPATIBLE_WITH = select({
    "@platforms//cpu:armv8-m": [],
    "//conditions:default": ["@platforms//:incompatible"],
})

rust_library(
    name = "cmsdk_apb_uart_kernel",
    srcs = [
        "cmsdk_apb_uart_kernel.rs",
    ],
    edition = "2024",
    tags = ["kernel"],
    target_compatible_with = TARGET_COMPATIBLE_WITH,
    deps = [
        ":cmsdk_apb_uart_regs",
        "//pw_kernel/kernel",
        "//pw_kernel/lib/circular_buffer",
        "//pw_kernel/lib/log_if",
        "//pw_kernel/lib/regs",
        "//pw_log/rust:pw_log",
        "//pw_status/rust:pw_status",
    ],
)

rust_library(
    name = "cmsdk_apb_uart_regs",
    srcs = [
        "cmsdk_apb_uart_regs.rs",
    ],
    edition = "2024",
    proc_macro_deps = [
        "@rust_crates//:paste",
    ],
    tags = ["kernel"],
    target_compatible_with = TARGET_COMPATIBLE_WITH,
    deps = [
        "//pw_kernel/lib/regs",
    ],
)
