# Copyright 2025 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.
load("@rules_rust//rust:defs.bzl", "rust_binary")
load("//pw_kernel/tooling:app_package.bzl", "app_package")

rust_binary(
    name = "test_interrupts",
    srcs = [
        "main.rs",
    ],
    edition = "2024",
    tags = ["kernel"],
    visibility = ["//visibility:public"],
    deps = [
        ":app_test_interrupts",
        "//pw_kernel/userspace",
        "//pw_log/rust:pw_log",
        "//pw_status/rust:pw_status",
    ],
)

app_package(
    name = "app_test_interrupts",
    app_name = "test_interrupts",
    edition = "2024",
    system_config = "//pw_kernel/target:system_config_file",
    tags = ["kernel"],
)

rust_binary(
    name = "test_interrupt_listener",
    srcs = [
        "interrupt_listener.rs",
    ],
    edition = "2024",
    tags = ["kernel"],
    visibility = ["//visibility:public"],
    deps = [
        ":app_test_interrupt_listener",
        "//pw_kernel/lib/pw_assert",
        "//pw_kernel/syscall:syscall_user",
        "//pw_kernel/userspace",
        "//pw_log/rust:pw_log",
        "//pw_status/rust:pw_status",
    ],
)

app_package(
    name = "app_test_interrupt_listener",
    app_name = "test_interrupt_listener",
    edition = "2024",
    system_config = "//pw_kernel/target:system_config_file",
    tags = ["kernel"],
)
