# Copyright 2025 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.
load("@rules_rust//rust:defs.bzl", "rust_binary")
load("//pw_kernel/tooling:app_package.bzl", "app_package")

rust_binary(
    name = "interrupts_test",
    srcs = [
        "main.rs",
    ],
    edition = "2024",
    tags = ["kernel"],
    visibility = ["//visibility:public"],
    deps = [
        ":app_interrupts_test",
        "//pw_kernel/drivers/uart/uart_16550:uart_16550_user",
        "//pw_kernel/lib/circular_buffer",
        "//pw_kernel/lib/log_if",
        "//pw_kernel/lib/regs",
        "//pw_kernel/syscall:syscall_user",
        "//pw_kernel/userspace",
        "//pw_log/rust:pw_log",
        "//pw_status/rust:pw_status",
    ],
)

app_package(
    name = "app_interrupts_test",
    app_name = "interrupts_test",
    edition = "2024",
    system_config = "//pw_kernel/target:system_config_file",
    tags = ["kernel"],
)
